琅智健康更新
1.1.2

--- a/h5_琅智健康/com/html/other/LR.html
+++ b/h5_琅智健康/com/html/other/LR.html
@@ -24,7 +24,7 @@
 				<form>
 					<div class="mui-input-row">
 						<label><span class="mui-icon mui-icon-person"></span></label>
-						<input type="text" value="" class="mui-input-clear" placeholder="请输入您的手机号" id="account">
+						<input type="number" value="" class="mui-input-clear" placeholder="请输入您的手机号" id="account">
 					</div>
 					<!--18900000001-->
 					<div class="mui-input-row">
