--- a/h5_琅智健康/young/html/monitor/young_monitor.html
+++ b/h5_琅智健康/young/html/monitor/young_monitor.html
@@ -47,74 +47,29 @@
 				<div class="ym-show-refresh">
 					<span class="mui-icon mui-icon-loop" style="color: #CF2D28;"></span><br />立即刷新
 				</div>
+				<div class="ym-mintor-time">
+					
+				</div>
 				<div class="ym-show-state" style="height: 150px;padding-top: 100px;">
 					<!--22:10 <span>上床了</span>-->
 				</div>
-				<!--<li class="mui-table-view-cell">
-					<span>刷新时间：</span>
-					<span id="ym_time">获取中</span>
-				</li>
-				<li class="mui-table-view-cell">
-					<span>睡眠状态：</span>
-					<span id="ym_state">获取中</span>
-				</li>
-				<li class="mui-table-view-cell">
-					<span>心率：</span>
-					<span id="ym_heart" class="y-heart">0</span>
-				</li>-->
 			</ul>
-			<div class="y-box" id="yb_stage_box" style="overflow: hidden;display: none;">
+			<div class="y-box" id="yb_stage_box" style="overflow: hidden;">
 				<li class="mui-table-view-cell" id="yb_stage">
 					<span>实时:</span>
 					<div class="mui-switch mui-switch-blue" id="real_time_monitor">
 						<div class="mui-switch-handle"></div>
 					</div>
 				</li>
-				<div id="ys_box" class="ss-box">
-
+				<div id="yb_stage_none" style="display: none;">
+					暂时没有数据，请等待刷新
 				</div>
-				<div class="ss-time">
-					<span id="ys_start" class="c-left"></span>
-					<span id="ys_now" class="c-right"></span>
+				<div id="yb_stage_1" style="display: ;">
+					
 				</div>
-				<ul class="ss-legend">
-					<li>
-						<i class="ssl-waking"></i>
-						<span>觉醒</span>
-					</li>
-					<li>
-						<i class="ssl-sleeping"></i>
-						<span>睡眠</span>
-					</li>
-					<li>
-						<i class="ssl-movement"></i>
-						<span>体动</span>
-					</li>
-					<li>
-						<i class="ssl-leaving"></i>
-						<span>离床</span>
-					</li>
-				</ul>
 			</div>
 		</div>
-		<!--<header id="com_header" class="mui-bar mui-bar-nav">
-			<h1 class="mui-title"></h1>
-			<button title="home" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">主页</button>
-		</header>
-		<nav id="com_nav" class="mui-bar mui-bar-tab">
-			<a class="nav-hover" goHref="monitor/young_monitor.html" title="young_monitor">
-				<span class="mui-icon mui-icon-gear"></span>
-				<span class="mui-tab-label">睡眠监控</span>
-			</a>
-			<a goHref="record/young_record.html" title="young_record">
-				<span class="mui-icon mui-icon-paperplane"></span>
-				<span class="mui-tab-label">睡眠记录</span>
-			</a>
-			<a goHref="user/young_user_info.html" title="young_user_info">
-				<span class="mui-icon mui-icon-person"></span>
-				<span class="mui-tab-label">使用者信息</span>
-			</a>
-		</nav>-->
+		
 	</body>
 
 	<script src="../../../com/js/min/mui.min.js"></script>
@@ -129,6 +84,7 @@
 		NOW = YOUNG;
 		YOUNG.nav.id = 'young_monitor';
 		mui.plusReady(Y_MONITOR.start);
+//		Y_MONITOR.start();
 	</script>
 
 </html>
